Run with java 8